kubernetes/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: kiii
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: kiii-proekt
        image: ppucoski/kiiiproject-backend:latest
        ports:
        - containerPort: 3000
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: kiii
spec:
  replicas:  2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: kiii-proekt
        image: ppucoski/kiiiproject-frontend:latest
        ports:
        - containerPort: 5173
