kubernetes/mongodbservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: kiii
spec:
  ports:
    - port: 27017
  clusterIP: None    
  selector:
    app: mongo
